@@ -2,6 +2,7 @@ From version 0.3.9 to 0.3.10
 - subscriber plugin provider registration management.
 - minor update for GNU conventions.
 - moved more stack configuration into base object.
+- revised periodic stats processing and logging.
 
 From version 0.3.8 to 0.3.9
 - man page for daemon admin support shell utility.
